# git-archaeologist

./: .env.example  .gitignore  Dockerfile  PROJECT_CONTEXT.md  README.md  app.py  chat.py  indexer.py  miner.py  pyproject.toml  qa.py  requirements.txt  search.py  utils.py
tests/: test_miner.py  test_qa.py  test_utils.py
